# IngSoftware

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  README.md  Vector.sln  Vector.vcxproj  Vector.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  example.vcxproj  example.vcxproj.filters  index.html  main.cpp
game/: CMakeLists.txt  main.cpp
game/include/: Box.h  BoxData.h  Command.h  Enemy.h  GameLoopManager.h  Input.h  Map.h  Object.h  Player.h  ResourceManager.h  Sprite.h  Tank.h  Vector.h  WindowManager.h
game/include/html/: _box_8h_source.html  _box_data_8h_source.html  _input_8h_source.html  _map_8h_source.html  _object_8h_source.html  _resource_manager_8h_source.html  _sprite_8h_source.html  _vector_8h_source.html  _window_manager_8h_source.html  annotated.html  class_box-members.html  class_box.html  class_box_data-members.html  class_box_data.html  class_input-members.html  class_input.html  class_map-members.html  class_map.html  class_object-members.html  class_object.html  class_resource_manager-members.html  class_resource_manager.html  class_sprite-members.html  class_sprite.html  class_vector3-members.html  class_vector3.html  class_window_manager-members.html  class_window_manager.html  classes.html  files.html  functions.html  functions_func.html  hierarchy.html
game/include/html/search/: all_0.js  all_3.js  searchdata.js  (+1 more)
game/src/: BoxData.cpp  Command.cpp  Enemy.cpp  GameLoopManager.cpp  Input.cpp  Map.cpp  Object.cpp  Player.cpp  ResourceManager.cpp  Sprite.cpp  Tank.cpp  WindowManager.cpp
(+28 files in other folders)
